# To-do-list-Clever_IT

./: README.md  app.py  pyproject.toml
instance/: todos.db
static/css/: styles.css
static/js/: scripts.js
templates/: index.html
