[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["wottan32 <mariotorreslagos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.0"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
